crates/strider/tests/snapshots/arm_thumb__floats__f64_compare.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v12" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "11" -> "v12" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v13" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "11" -> "v13" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v2" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "15" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v13" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v12" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v17" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "16" -> "v17" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v18" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "16" -> "v18" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "15" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "20" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v18" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v17" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "20" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "8" -> "21" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "9" -> "21" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "10" -> "21" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "22" [label="φ r0", shape=house, fillcolor="#163030"];
  "20" -> "22" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="φ r0", shape=house, fillcolor="#163030"];
  "15" -> "23" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "27" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "29" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "30" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="Truncate\nu32 → u8", shape=box, fillcolor="#2d2d2d"];
  "34" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x1c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x1c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "45" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "46" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "10" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "49" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "9" -> "49" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x1d:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "54" -> "52" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "54" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "55" -> "54" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "55" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "46" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "46" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "58" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x1e:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "63" -> "62" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "63" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "49" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "64" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "66" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "68" -> "66" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "68" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "69" -> "68" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "69" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "49" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "70" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0xfffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "70" [label="init\nfpscr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "30" [label="Truncate\nu32 → u8", shape=box, fillcolor="#2d2d2d"];
  "72" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "72" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "74" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "74" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "75" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "75" [label="Truncate\nu32 → u8", shape=box, fillcolor="#2d2d2d"];
  "77" -> "75" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "77" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="const 0x1e:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="And:bool", shape=box, fillcolor="#2d2d2d"];
  "79" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "30" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "81" -> "79" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "81" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "74" -> "81" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "30" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "82" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
}
